[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta" # If not defined, then legacy behavior can happen.

[project]
name = "torram"
version = "1.4.12"
description = "Machine Learning essential tools for PyTorch."
readme = "README.md"
license = {text = "MIT License"}

[tool.setuptools.packages.find]
include = ["torram*"]  # Include only the 'torram' package

[tool.flake8]
max-line-length = 100

[tool.black]
line-length = 100
